# nlp-score

./: .gitignore  Cargo.toml  README.md
mecab/: Cargo.toml
mecab/src/: lib.rs  tests.rs
metrics/src/: lib.rs
metrics/src/rouge/: mod.rs
tagger/: Cargo.toml
tagger/src/: lib.rs
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs  tests.rs
