[package]
name = "mecab"
edition = "2021"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
indicatif = { workspace = true }
reqwest = { workspace = true }
once_cell = "1.20.2"
tokio = { workspace = true }
vibrato = "0.5.1"
xz2 = "0.1.7"
tar = "0.4.43"
zstd = "0.13.2"
csv = "1.3.1"
